--- a/src/components/genericItemsPage/GenericItemsPage.css
+++ b/src/components/genericItemsPage/GenericItemsPage.css
@@ -8,7 +8,7 @@
 
 .storeLabel {
   text-align: center;
-  margin-bottom: 40px;
+  margin: 0;
   color: #1a237e;
   font-size: 2.7rem;
   letter-spacing: 1px;
